--- a/src/Features/Core/Portable/xlf/FeaturesResources.pl.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.pl.xlf
@@ -198,8 +198,8 @@
         <note />
       </trans-unit>
       <trans-unit id="DocumentIsOutOfSyncWithDebuggee">
-        <source>The current content of source file '{0}' does not match the built source. The debug session can't continue until the content of the source file is restored.</source>
-        <target state="translated">Bieżąca zawartość pliku źródłowego „{0}” nie pasuje do skompilowanego źródła. Nie można kontynuować sesji debugowania do czasu przywrócenia zawartości pliku źródłowego.</target>
+        <source>The current content of source file '{0}' does not match the built source. Any changes made to this file while debugging won't be applied until its content matches the built source.</source>
+        <target state="needs-review-translation">Bieżąca zawartość pliku źródłowego „{0}” nie pasuje do skompilowanego źródła. Nie można kontynuować sesji debugowania do czasu przywrócenia zawartości pliku źródłowego.</target>
         <note />
       </trans-unit>
       <trans-unit id="EditAndContinue">
