--- a/src/Features/Core/Portable/xlf/FeaturesResources.zh-Hans.xlf
+++ b/src/Features/Core/Portable/xlf/FeaturesResources.zh-Hans.xlf
@@ -198,8 +198,8 @@
         <note />
       </trans-unit>
       <trans-unit id="DocumentIsOutOfSyncWithDebuggee">
-        <source>The current content of source file '{0}' does not match the built source. The debug session can't continue until the content of the source file is restored.</source>
-        <target state="translated">源文件 "{0}" 的当前内容与生成的源不匹配。除非还原源文件的内容，否则调试会话将无法继续。</target>
+        <source>The current content of source file '{0}' does not match the built source. Any changes made to this file while debugging won't be applied until its content matches the built source.</source>
+        <target state="needs-review-translation">源文件 "{0}" 的当前内容与生成的源不匹配。除非还原源文件的内容，否则调试会话将无法继续。</target>
         <note />
       </trans-unit>
       <trans-unit id="EditAndContinue">
